--- a/main.html
+++ b/main.html
@@ -9,7 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<p>My current favourite song is <a href="">prince</a></p>
+    My current favourite song is 
+	    <a href="https://www.youtube.com/watch?v=RgKAFK5djSk" target="_blank">
+	      See You Again
+	    </a>.
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
